--- a/index.html
+++ b/index.html
@@ -5,6 +5,151 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link href="fonts/fonts.css" rel="stylesheet"/>
+    <link href="global.css" rel="stylesheet"/>
+    <link href="styles/style.css" rel="stylesheet"/>
   </head>
-  <body></body>
-</html>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li><a href="" class="header__links-list-item">Главная</a></li>
+          <li><a href="" class="header__links-list-item">Посмотреть лоты</a></li>
+          <li><a href="" class="header__links-list-item">Об аукционе</a></li>
+        </ul>
+      </nav>
+      <a class="header__logo"></a>
+      <address class="header__address">
+        <ul>
+          <li><a href="" class="header__links-list-item">+9 999 555 5555</a></li><br>
+          <li><a href="" class="header__links-list-item">info@sobaka.ge</a></li><br>
+          <li><a href="" class="header__links-list-item">наб. Принсенграхт 263- 265, Амстердам</a></li>
+        </ul>
+      </address>
+    </header>
+    <main class="main">
+        <section class="cover">
+          <div class="overlay"></div>
+          <div class="cover__container">
+            <h1 class="cover__title">
+              <span class="span one">Оно</span>
+              <span class="span two">Тебе</span>
+              <span class="span three">Надо</span>
+            </h1>
+            <div class="cover__description">
+              <p class="subline">аукцион вещей, в которые никто не верил</p>
+              <button>сделать ставку</button>
+            </div>
+          </div>
+        </section>
+        <section class="lots">
+          <div class="container">
+            <title class="lots__heading">ЛОТЫ</title>
+            <ul class="lots__card-list">
+              <li class="lots__card-list-item over">
+                <a href="" class="card-link" style="background-image: url('images/card-lot-01.jpg')">
+                  <article class="card overlay">
+                    <h3 class="cover__description-text">фильм режиссёра, который бросил киношколу</h3>
+                    <p class="card__text">Не просто бросил, 
+                      а ушёл с первой лекции. Какой была бы ваша ставка, 
+                      если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                  </article>
+                </a>
+              </li >
+              <li class="lots__card-list-item">
+                <a href="" class="card-link" style="background-image: url('images/card-lot-02.jpg')">
+                  <article class="card overlay">
+                    <h3 class="cover__description-text">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                    <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания 
+                      и с переходами на древнеанглийский. В ней одновременно рассказывается 
+                      о 16 июня 1904 года и об истории литературы, начиная с античных времён. 
+                      И это всё накладывается на эпическую поэму Гомера. 
+                      Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                  </article>
+                </a>
+              </li>
+              <li class="lots__card-list-item">
+                <a href="" class="card-link" style="background-image: url('images/card-lot-03.jpg')">
+                  <article class="card overlay">
+                    <h3 class="cover__description-text">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                    <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе 
+                      что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... 
+                      Сколько бы вы на такое поставили, если бы не знали, 
+                      что это — одна из революционных работ Кандинского?</p>
+                  </article>
+                </a>
+              </li>
+            </ul>
+            <a href="" class="lots__look-more-link">Посмотреть больше</a>
+          </div>
+        </section>
+        <section class="about">
+          <div class="container">
+            <div class="logo__column">
+              <div class="about__logo">
+                <img src="images/logo-white.svg" class="about__logo-image">
+              </div>
+            </div>
+            <div class="about__column">
+              <h2 class="about__title">ОБ АУКЦИОНЕ</h2>
+              <div class="about__text">
+                <p>Здесь вы не встретите очередное пафосное 
+                собрание невероятно дорогого антиквариата. Наши лоты вообще не 
+                должны были попасть ни на один аукцион. Потому что кому нужен 
+                дневник девочки-подростка или картина, которую может нарисовать 
+                даже ребёнок? 
+                Кому нужны все эти странные вещи, созданные любителями?</p>
+              </div>
+                <div class="about__text">
+                  <p>Слишком сложные или, наоборот, слишком простые. 
+                    Опережающие своё время. В пух и прах растерзанные критиками. Непринятые 
+                    и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                    на критику, кажущуюся простоту или сложность, сейчас без этих лотов 
+                    невозможно представить современную культуру. Когда в эти вещи не верил 
+                    никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+                </div>
+            </div>
+          </div>
+        </section>
+    </main>
+  </body>
+<footer class="footer">
+  <div class="container">
+    <address class="footer__address">
+      <ul class="footer__menu-list">
+        <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">+9 999 555 5555</a></li>
+        <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">info@sobaka.ge</a></li>
+        <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">наб. Принсенграхт 263-265, Амстердам</a></li>
+      </ul>
+    </address>
+
+    <nav class="footer__menu">
+      <ul class="footer__menu-list">
+        <li class="footer__menu-list-item"><a href="#" class="footer__menu-link footer__menu-link_active">главная</a></li>
+        <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">посмотреть лоты</a></li>
+        <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">об аукционе</a></li>
+      </ul>
+    </nav>
+
+    <ul class="footer__social-list">
+      <li class="footer__social-list-item">
+        <a href="#" class="footer__social-link">
+          <img src="images/yt.svg" alt="YouTube" class="footer__social-icon">
+        </a>
+      </li>
+      <li class="footer__social-list-item">
+        <a href="#" class="footer__social-link">
+          <img src="images/vk.svg" alt="ВКонтакте" class="footer__social-icon">
+        </a>
+      </li>
+      <li class="footer__social-list-item">
+        <a href="#" class="footer__social-link">
+          <img src="images/pinterest.svg" alt="Pinterest" class="footer__social-icon">
+        </a>
+      </li>
+    </ul>
+  </div>
+</footer>
+
+  </body>
+  </html>
