--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <a class="header__logo"></a>
       <address class="header__address">
         <ul>
-          <li><a href="" class="header__links-list-item">+9 999 555 5555</a></li><br>
-          <li><a href="" class="header__links-list-item">info@sobaka.ge</a></li><br>
+          <li><a href="" class="header__links-list-item">+9 999 555 5555</a></li>
+          <li><a href="" class="header__links-list-item">info@sobaka.ge</a></li>
           <li><a href="" class="header__links-list-item">наб. Принсенграхт 263- 265, Амстердам</a></li>
         </ul>
       </address>
@@ -44,7 +44,7 @@
         </section>
         <section class="lots">
           <div class="container">
-            <title class="lots__heading">ЛОТЫ</title>
+            <h1 class="lots__heading">ЛОТЫ</h1>
             <ul class="lots__card-list">
               <li class="lots__card-list-item over">
                 <a href="" class="card-link" style="background-image: url('images/card-lot-01.jpg')">
@@ -87,7 +87,7 @@
           <div class="container">
             <div class="logo__column">
               <div class="about__logo">
-                <img src="images/logo-white.svg" class="about__logo-image">
+                <img src="images/logo-white.svg" alt="Логотип Оно тебе надо" class="about__logo-image">
               </div>
             </div>
             <div class="about__column">
@@ -112,7 +112,6 @@
           </div>
         </section>
     </main>
-  </body>
 <footer class="footer">
   <div class="container">
     <address class="footer__address">
@@ -150,6 +149,5 @@
     </ul>
   </div>
 </footer>
-
-  </body>
-  </html>
+</body>
+</html>
