--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
           <li><a href="" class="header__links-list-item">Об аукционе</a></li>
         </ul>
       </nav>
-      <a class="header__logo"></a>
+      <a href="#" class="header__logo"></a>
       <address class="header__address">
         <ul>
-          <li><a href="" class="header__links-list-item">+9 999 555 5555</a></li>
-          <li><a href="" class="header__links-list-item">info@sobaka.ge</a></li>
+          <li><a href="tel:+70000000999" class="header__links-list-item">+9 999 555 5555</a></li>
+          <li><a href="mailto:example@mail.ru" class="header__links-list-item">info@sobaka.ge</a></li>
           <li><a href="" class="header__links-list-item">наб. Принсенграхт 263- 265, Амстердам</a></li>
         </ul>
       </address>
@@ -87,7 +87,7 @@
           <div class="container">
             <div class="logo__column">
               <div class="about__logo">
-                <img src="images/logo-white.svg" alt="Логотип Оно тебе надо" class="about__logo-image">
+                <img src="images/logo-white.svg" alt="Логотип Оно тебе надо" class="about__logo-image" alt="белый логотип">
               </div>
             </div>
             <div class="about__column">
@@ -112,12 +112,13 @@
           </div>
         </section>
     </main>
+  </body>
 <footer class="footer">
   <div class="container">
     <address class="footer__address">
       <ul class="footer__menu-list">
-        <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">+9 999 555 5555</a></li>
-        <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">info@sobaka.ge</a></li>
+        <li class="footer__menu-list-item"><a href="tel:+70000000999" class="footer__menu-link">+9 999 555 5555</a></li>
+        <li class="footer__menu-list-item"><a href="mailto:example@mail.ru" class="footer__menu-link">info@sobaka.ge</a></li>
         <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">наб. Принсенграхт 263-265, Амстердам</a></li>
       </ul>
     </address>
@@ -149,5 +150,4 @@
     </ul>
   </div>
 </footer>
-</body>
 </html>
