--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="" class="header__links-list-item">Об аукционе</a></li>
         </ul>
       </nav>
-      <a href="#" class="header__logo"></a>
+      <a href="#" class="header__logo"><img src="'../images/logo-black.svg"></a>
       <address class="header__address">
         <ul>
           <li><a href="tel:+70000000999" class="header__links-list-item">+9 999 555 5555</a></li>
@@ -87,7 +87,7 @@
         <div class="container">
           <div class="logo__column">
             <div class="about__logo">
-              <img src="images/logo-white.svg" alt="Логотип Оно тебе надо" class="about__logo-image" alt="белый логотип">
+              <img src="images/logo-white.svg" alt="Логотип Оно тебе надо" class="about__logo-image">
             </div>
           </div>
           <div class="about__column">
