--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="" class="header__links-list-item">Об аукционе</a></li>
         </ul>
       </nav>
-      <a href="#" class="header__logo"><img src="'../images/logo-black.svg"></a>
+      <a href="#" class="header__logo"><img src="'../images/logo-black.svg" alt="Логотип заголовка"></a>
       <address class="header__address">
         <ul>
           <li><a href="tel:+70000000999" class="header__links-list-item">+9 999 555 5555</a></li>
@@ -112,7 +112,6 @@
         </div>
       </section>
     </main>
-  </body>
   <footer class="footer">
     <div class="container">
       <address class="footer__address">
@@ -148,4 +147,5 @@
       </ul>
     </div>
   </footer>
+  </body>
 </html>
