--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="" class="header__links-list-item">Об аукционе</a></li>
         </ul>
       </nav>
-      <a href="#" class="header__logo"><img src="'../images/logo-black.svg" alt="Логотип заголовка"></a>
+      <a href="#" class="header__logo"><img src="../images/logo-black.svg" alt="Логотип заголовка"></a>
       <address class="header__address">
         <ul>
           <li><a href="tel:+70000000999" class="header__links-list-item">+9 999 555 5555</a></li>
@@ -112,40 +112,40 @@
         </div>
       </section>
     </main>
-  <footer class="footer">
-    <div class="container">
-      <address class="footer__address">
-        <ul class="footer__menu-list">
-          <li class="footer__menu-list-item"><a href="tel:+70000000999" class="footer__menu-link">+9 999 555 5555</a></li>
-          <li class="footer__menu-list-item"><a href="mailto:example@mail.ru" class="footer__menu-link">info@sobaka.ge</a></li>
-          <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">наб. Принсенграхт 263-265, Амстердам</a></li>
+    <footer class="footer">
+      <div class="container">
+        <address class="footer__address">
+          <ul class="footer__menu-list">
+            <li class="footer__menu-list-item"><a href="tel:+70000000999" class="footer__menu-link">+9 999 555 5555</a></li>
+            <li class="footer__menu-list-item"><a href="mailto:example@mail.ru" class="footer__menu-link">info@sobaka.ge</a></li>
+            <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">наб. Принсенграхт 263-265, Амстердам</a></li>
+          </ul>
+        </address>
+        <nav class="footer__menu">
+          <ul class="footer__menu-list">
+            <li class="footer__menu-list-item"><a href="#" class="footer__menu-link footer__menu-link_active">главная</a></li>
+            <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">посмотреть лоты</a></li>
+            <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">об аукционе</a></li>
+          </ul>
+        </nav>
+        <ul class="footer__social-list">
+          <li class="footer__social-list-item">
+            <a href="#" class="footer__social-link">
+              <img src="images/yt.svg" alt="YouTube" class="footer__social-icon">
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a href="#" class="footer__social-link">
+              <img src="images/vk.svg" alt="ВКонтакте" class="footer__social-icon">
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a href="#" class="footer__social-link">
+              <img src="images/pinterest.svg" alt="Pinterest" class="footer__social-icon">
+            </a>
+          </li>
         </ul>
-      </address>
-      <nav class="footer__menu">
-        <ul class="footer__menu-list">
-          <li class="footer__menu-list-item"><a href="#" class="footer__menu-link footer__menu-link_active">главная</a></li>
-          <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">посмотреть лоты</a></li>
-          <li class="footer__menu-list-item"><a href="#" class="footer__menu-link">об аукционе</a></li>
-        </ul>
-      </nav>
-      <ul class="footer__social-list">
-        <li class="footer__social-list-item">
-          <a href="#" class="footer__social-link">
-            <img src="images/yt.svg" alt="YouTube" class="footer__social-icon">
-          </a>
-        </li>
-        <li class="footer__social-list-item">
-          <a href="#" class="footer__social-link">
-            <img src="images/vk.svg" alt="ВКонтакте" class="footer__social-icon">
-          </a>
-        </li>
-        <li class="footer__social-list-item">
-          <a href="#" class="footer__social-link">
-            <img src="images/pinterest.svg" alt="Pinterest" class="footer__social-icon">
-          </a>
-        </li>
-      </ul>
-    </div>
-  </footer>
+      </div>
+    </footer>
   </body>
 </html>
