--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
       <a href="#" class="header__logo"><img src="../images/logo-black.svg" alt="Логотип заголовка"></a>
       <address class="header__address">
-        <ul>
+        <ul class="header__address">
           <li><a href="tel:+70000000999" class="header__links-list-item">+9 999 555 5555</a></li>
           <li><a href="mailto:example@mail.ru" class="header__links-list-item">info@sobaka.ge</a></li>
           <li><a href="" class="header__links-list-item">наб. Принсенграхт 263- 265, Амстердам</a></li>
